src/ASGrammarParser.js
// Generated from ASGrammar.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import ASGrammarListener from './ASGrammarListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ASGrammarParser extends antlr4.Parser {

    static grammarFileName = "ASGrammar.g4";
    static literalNames = [ null, "'delay'", "'count'", "'of'", "'copy'", 
                            "'to'", "'error'", "'number'", "'click'", "'open'", 
                            "'location'", "'activate'", "'file'", "'save'", 
                            "'keystroke'", "'('", "'character'", "'id'", 
                            "')'", "'using'", "'repeat'", "'with'", "'from'", 
                            "'in'", "'until'", "'by'", "'end'", "'while'", 
                            "'then'", "'exit'", "'tell'", "'process'", "'application'", 
                            "'exists'", "'if'", "'else'", "'return'", "'on'", 
                            "'run'", "','", "'+'", "'-'", "'*'", "'/'", 
                            "'mod'", "'^'", "'!='", "'is'", "'not'", "'='", 
                            "'equal'", "'>'", "'<'", "'>='", "'<='", "'&'", 
                            "'and'", "'or'", "'contains'", "'whose'", "'where'", 
                            "'set'", "'property'", "':'", "'listener'", 
                            "'idle'", "'quit'", "'try'", "'value'", "'text'", 
                            "'returned'", "'display'", "'dialog'", "'default'", 
                            "'answer'", "'thru'", "'properties'", "'make'", 
                            "'new'", "'after'", "'last'", "'at'", "'as'", 
                            "'get'", "'menu'", "'bar'", "'button'", "'item'", 
                            "'the'", "'body'", "'{'", "'}'", "'missing'", 
                            "'buttons'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "WHITESPACE", 
                             "SingleLineComment", "MultiLineComment", "BOOLEAN", 
                             "STRING", "FLOAT", "INTEGER", "IDENTIFIER" ];
    static ruleNames = [ "program", "delay", "count", "copy", "error", "click", 
                         "openLocation", "activate", "openFile", "save", 
                         "keystroke", "using", "loopStatement", "repeatLoop", 
                         "whileLoop", "exit", "tell", "tellApp", "tellArg", 
                         "appType", "tellId", "exists", "ifBlock", "elseIf", 
                         "elseStatement", "ifStatement", "toStatement", 
                         "statementList", "returnStatement", "statement", 
                         "parameterList", "onRun", "functionDeclaration", 
                         "functionBody", "functionCall", "arguments", "range", 
                         "operator", "set", "setProperty", "listener", "errorHandler", 
                         "operation", "expression", "value", "withProperties", 
                         "makeNew", "variable", "modifier", "property", 
                         "record", "list", "basicData", "missingValue", 
                         "displayDialog" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ASGrammarParser.ruleNames;
        this.literalNames = ASGrammarParser.literalNames;
        this.symbolicNames = ASGrammarParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ASGrammarParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1745906514) !== 0) || ((((_la - 34)) & ~0x1f) === 0 && ((1 << (_la - 34)) & 134217741) !== 0) || ((((_la - 67)) & ~0x1f) === 0 && ((1 << (_la - 67)) & 1041) !== 0) || _la===101) {
	            this.state = 110;
	            this.statement();
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 116;
	        this.match(ASGrammarParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	delay() {
	    let localctx = new DelayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ASGrammarParser.RULE_delay);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(ASGrammarParser.T__0);
	        this.state = 119;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	count() {
	    let localctx = new CountContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ASGrammarParser.RULE_count);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.match(ASGrammarParser.T__1);
	        this.state = 123;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 122;
	            this.match(ASGrammarParser.T__2);
	        }

	        this.state = 125;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	copy() {
	    let localctx = new CopyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ASGrammarParser.RULE_copy);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.match(ASGrammarParser.T__3);
	        this.state = 128;
	        this.operation();
	        this.state = 129;
	        this.match(ASGrammarParser.T__4);
	        this.state = 130;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	error() {
	    let localctx = new ErrorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ASGrammarParser.RULE_error);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(ASGrammarParser.T__5);
	        this.state = 133;
	        this.expression();
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 134;
	            this.match(ASGrammarParser.T__6);
	            this.state = 135;
	            this.expression();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	click() {
	    let localctx = new ClickContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ASGrammarParser.RULE_click);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(ASGrammarParser.T__7);
	        this.state = 140;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        if(la_===1) {
	            this.state = 139;
	            this.expression();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	openLocation() {
	    let localctx = new OpenLocationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ASGrammarParser.RULE_openLocation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(ASGrammarParser.T__8);
	        this.state = 143;
	        this.match(ASGrammarParser.T__9);
	        this.state = 144;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	activate() {
	    let localctx = new ActivateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ASGrammarParser.RULE_activate);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(ASGrammarParser.T__10);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	openFile() {
	    let localctx = new OpenFileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ASGrammarParser.RULE_openFile);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this.match(ASGrammarParser.T__8);
	        this.state = 149;
	        this.match(ASGrammarParser.T__11);
	        this.state = 150;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	save() {
	    let localctx = new SaveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ASGrammarParser.RULE_save);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(ASGrammarParser.T__12);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	keystroke() {
	    let localctx = new KeystrokeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ASGrammarParser.RULE_keystroke);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(ASGrammarParser.T__13);
	        this.state = 162;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 155;
	            this.expression();
	            break;

	        case 2:
	            this.state = 156;
	            this.match(ASGrammarParser.T__14);
	            this.state = 157;
	            this.match(ASGrammarParser.T__15);
	            this.state = 158;
	            this.match(ASGrammarParser.T__16);
	            this.state = 159;
	            this.expression();
	            this.state = 160;
	            this.match(ASGrammarParser.T__17);
	            break;

	        }
	        this.state = 165;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19) {
	            this.state = 164;
	            this.using();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	using() {
	    let localctx = new UsingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ASGrammarParser.RULE_using);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.match(ASGrammarParser.T__18);
	        this.state = 168;
	        this.list();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loopStatement() {
	    let localctx = new LoopStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ASGrammarParser.RULE_loopStatement);
	    try {
	        this.state = 172;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 20:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 170;
	            this.repeatLoop();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 171;
	            this.whileLoop();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	repeatLoop() {
	    let localctx = new RepeatLoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, ASGrammarParser.RULE_repeatLoop);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.match(ASGrammarParser.T__19);
	        this.state = 192;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.state = 175;
	            this.match(ASGrammarParser.T__20);
	            this.state = 176;
	            this.expression();
	            this.state = 181;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 22:
	                this.state = 177;
	                this.match(ASGrammarParser.T__21);
	                this.state = 178;
	                this.range();
	                break;
	            case 23:
	                this.state = 179;
	                this.match(ASGrammarParser.T__22);
	                this.state = 180;
	                this.variable();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        case 24:
	            this.state = 183;
	            this.match(ASGrammarParser.T__23);
	            this.state = 184;
	            this.expression();
	            break;
	        case 22:
	            this.state = 185;
	            this.match(ASGrammarParser.T__21);
	            this.state = 186;
	            this.range();
	            this.state = 189;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 187;
	                this.match(ASGrammarParser.T__24);
	                this.state = 188;
	                this.expression();
	            }

	            break;
	        case 2:
	        case 15:
	        case 26:
	        case 33:
	        case 36:
	        case 68:
	        case 69:
	        case 71:
	        case 77:
	        case 80:
	        case 83:
	        case 84:
	        case 85:
	        case 86:
	        case 87:
	        case 88:
	        case 89:
	        case 90:
	        case 92:
	        case 97:
	        case 98:
	        case 99:
	        case 100:
	        case 101:
	            this.state = 191;
	            this.expression();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 194;
	        this.statementList();
	        this.state = 195;
	        this.match(ASGrammarParser.T__25);
	        this.state = 196;
	        this.match(ASGrammarParser.T__19);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileLoop() {
	    let localctx = new WhileLoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ASGrammarParser.RULE_whileLoop);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 198;
	        this.match(ASGrammarParser.T__26);
	        this.state = 199;
	        this.expression();
	        this.state = 200;
	        this.match(ASGrammarParser.T__27);
	        this.state = 201;
	        this.statementList();
	        this.state = 202;
	        this.match(ASGrammarParser.T__25);
	        this.state = 203;
	        this.match(ASGrammarParser.T__26);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exit() {
	    let localctx = new ExitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, ASGrammarParser.RULE_exit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205;
	        this.match(ASGrammarParser.T__28);
	        this.state = 206;
	        this.match(ASGrammarParser.T__19);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tell() {
	    let localctx = new TellContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, ASGrammarParser.RULE_tell);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 208;
	        this.match(ASGrammarParser.T__29);
	        this.state = 211;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	        case 32:
	            this.state = 209;
	            this.tellApp();
	            break;
	        case 2:
	        case 26:
	        case 33:
	        case 36:
	        case 68:
	        case 69:
	        case 71:
	        case 77:
	        case 80:
	        case 83:
	        case 84:
	        case 85:
	        case 86:
	        case 87:
	        case 88:
	        case 89:
	        case 90:
	        case 92:
	        case 97:
	        case 98:
	        case 99:
	        case 100:
	        case 101:
	            this.state = 210;
	            this.tellId();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tellApp() {
	    let localctx = new TellAppContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, ASGrammarParser.RULE_tellApp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this.appType();
	        this.state = 214;
	        this.match(ASGrammarParser.STRING);
	        this.state = 215;
	        this.tellArg();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tellArg() {
	    let localctx = new TellArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, ASGrammarParser.RULE_tellArg);
	    try {
	        this.state = 222;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 217;
	            this.toStatement();
	            break;
	        case 1:
	        case 4:
	        case 6:
	        case 8:
	        case 9:
	        case 11:
	        case 13:
	        case 14:
	        case 20:
	        case 27:
	        case 29:
	        case 30:
	        case 34:
	        case 36:
	        case 37:
	        case 61:
	        case 67:
	        case 71:
	        case 77:
	        case 101:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 218;
	            this.statementList();
	            this.state = 219;
	            this.match(ASGrammarParser.T__25);
	            this.state = 220;
	            this.match(ASGrammarParser.T__29);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	appType() {
	    let localctx = new AppTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, ASGrammarParser.RULE_appType);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 224;
	        _la = this._input.LA(1);
	        if(!(_la===31 || _la===32)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tellId() {
	    let localctx = new TellIdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, ASGrammarParser.RULE_tellId);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 226;
	        this.operation();
	        this.state = 227;
	        this.tellArg();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exists() {
	    let localctx = new ExistsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, ASGrammarParser.RULE_exists);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 229;
	        this.match(ASGrammarParser.T__32);
	        this.state = 230;
	        this.match(ASGrammarParser.T__30);
	        this.state = 231;
	        this.match(ASGrammarParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifBlock() {
	    let localctx = new IfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, ASGrammarParser.RULE_ifBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 233;
	        this.ifStatement();
	        this.state = 237;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 234;
	                this.elseIf(); 
	            }
	            this.state = 239;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	        this.state = 241;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 240;
	            this.elseStatement();
	        }

	        this.state = 243;
	        this.match(ASGrammarParser.T__25);
	        this.state = 244;
	        this.match(ASGrammarParser.T__33);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseIf() {
	    let localctx = new ElseIfContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, ASGrammarParser.RULE_elseIf);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 246;
	        this.match(ASGrammarParser.T__34);
	        this.state = 247;
	        this.ifStatement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseStatement() {
	    let localctx = new ElseStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, ASGrammarParser.RULE_elseStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 249;
	        this.match(ASGrammarParser.T__34);
	        this.state = 250;
	        this.statementList();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStatement() {
	    let localctx = new IfStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, ASGrammarParser.RULE_ifStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 252;
	        this.match(ASGrammarParser.T__33);
	        this.state = 254;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3 || _la===23 || ((((_la - 40)) & ~0x1f) === 0 && ((1 << (_la - 40)) & 1047551) !== 0)) {
	            this.state = 253;
	            this.operator();
	        }

	        this.state = 256;
	        this.expression();
	        this.state = 257;
	        this.match(ASGrammarParser.T__27);
	        this.state = 258;
	        this.statementList();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	toStatement() {
	    let localctx = new ToStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 52, ASGrammarParser.RULE_toStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 260;
	        this.match(ASGrammarParser.T__4);
	        this.state = 261;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


